<resources>
    <string name="app_name">Rentx</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="repass">Re-enter Password</string>
    <string name="phone">Phone number</string>
    <string name="email">E-mail</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="id_num">National ID No.</string>
    <string name="account">Create an account</string>
    <string name="dont_have">"Don't have account?"</string>
    <string name="click">Click here</string>
</resources>
