<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="383dp"
        android:layout_height="175dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="103dp"
        android:src="@drawable/logoxxx" />

    <EditText
        android:id="@+id/txtuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle2"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        tools:ignore="Suspicious0dp" />

    <EditText
        android:id="@+id/txtpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle2"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:paddingTop="10dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="130dp"
        android:background="@drawable/rectangle3"
        android:text="@string/signin"
        android:textColor="#ffffff"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/dont_have" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:text="@string/click"
            android:textColor="#2B93E9" />
    </LinearLayout>




</LinearLayout>